--- a/templates/read_data.html
+++ b/templates/read_data.html
@@ -7,6 +7,7 @@
 <body>
     <h1>Liste des Clients</h1>
     <table>
+        <caption>Liste des clients et réservations pour août 2025</caption>
         <tr>
             <th>ID</th>
             <th>Création</th>
